# cmake-examples

./: README.md
01-basic-example/: CMakeLists.txt
02-install-example/: CMakeLists.txt
02-install-example/cmake/: Utilities.cmake
02-install-example/executable/: main.cpp
03-packaging-example/: CMakeLists.txt  project-meta-info.cmake
03-packaging-example/cmake/: PackagingDEB.cmake  PackagingWIX.cmake
03-packaging-example/executable/: CMakeLists.txt
04-generate-config-example/: CMakeLists.txt  README.md
04-generate-config-example/cmake/: Config.cmake.in  Packaging.cmake  PackagingRPM.cmake
04-generate-config-example/executable/: main.cpp
05-conan-example/: CMakeLists.txt  README.md  conanfile.txt
05-conan-example/cmake/: PackagingWIX.cmake
06-vcpkg-example/: CMakeLists.txt  LICENSE.txt  README.md
06-vcpkg-example/cmake/: Packaging.cmake  SetupConan.cmake  StandardProjectSettings.cmake
07-generate-export-header/: CMakeLists.txt  README.md  project-meta-info.cmake
07-generate-export-header/tests/: CMakeLists.txt  example_tests.cpp
